# academic-presentations

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEDUPLICATION_REPORT.md  MIGRATION_SUMMARY.md  PHASE_0_ANALYSIS.md  PHASE_0_COMPLETE.md  QUALITY.md  README.md  REORGANIZATION_PROPOSAL.md  compile_all.sh  environment.yml  install_r_packages.R  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: markdown-link-check-config.json
.github/workflows/: check-links.yml  compile-latex.yml  generate-previews.yml
00-programming-fundamentals/: README.md
00-programming-fundamentals/r-programming/: README.md
01-foundations/: README.md
01-foundations/feature-engineering/: README.md
01-foundations/optimization/: README.md
01-foundations/pca/: README.md
01-foundations/statistical-modeling/: README.md
02-deep-learning/: README.md
02-deep-learning/deep-learning-fundamentals/: README.md
02-deep-learning/reinforcement-learning/: README.md
03-bayesian-methods/: README.md
03-bayesian-methods/bayesian-machine-learning/: README.md
03-bayesian-methods/mcmc/: README.md
04-causal-inference/: README.md
04-causal-inference/ab-testing/: README.md
04-causal-inference/causal-inference-fundamentals/: README.md
05-time-series/: README.md
05-time-series/time-series-forecasting/: README.md
06-advanced-topics/: README.md
06-advanced-topics/computer-science/: README.md
06-advanced-topics/explainable-ai/: README.md
06-advanced-topics/mlops-deployment/: README.md
07-capstone-projects/: README.md
07-capstone-projects/industry-focus/: INDUSTRY_FOCUS_ENHANCEMENT_GUIDE.md  README.md  industry_focus_enhancements.tex
07-capstone-projects/prerequisites/: README.md  capstone_prerequisites_appendix.tex
07-capstone-projects/project-guides/: README.md  capstone_projects_enhancements.tex
08-data-science-applications-course/: README.md
08-data-science-applications-course/assessments/: README.md  causal_inference_assessment.aux  (+4 more)
09-unit-tests/: .gitignore  unit_tests.aux  unit_tests.fdb_latexmk  unit_tests.fls  unit_tests.out  unit_tests.tex
assessments/: README.md
bayes/: bayesian_ml_beamer.aux  bayesian_ml_beamer.fdb_latexmk  bayesian_ml_beamer.fls  bayesian_ml_beamer.tex  bayesian_ml_beamer.vrb
bibliographies/: causal_inference_enhancements_references.bib  causal_inference_references.bib  mcmc_enhancements_references.bib
computer_science/: object_oriented_programming.aux  object_oriented_programming.fdb_latexmk  object_oriented_programming.fls  object_oriented_programming.toc  object_oriented_programming.vrb  streaming_pipeline_processing.fdb_latexmk  streaming_pipeline_processing.fls  streaming_pipeline_processing.nav  streaming_pipeline_processing.out  streaming_pipeline_processing.toc
data_science_applications/: CAPSTONE_PROJECTS_ENHANCEMENT_GUIDE.md  CAUSAL_ENHANCEMENT_GUIDE.md  COMPETENCY_MATRICES.md  ab_testing_experimental_design_beamer.tex  causal_inference_beamer.fdb_latexmk  causal_inference_beamer.fls  causal_inference_beamer.nav  causal_inference_beamer.out  causal_inference_beamer.tex  causal_inference_beamer.vrb  causal_inference_enhancements.tex  deep_learning_beamer.tex  explainable_ai_beamer.tex  feature_engineering_beamer.aux  feature_engineering_beamer.fdb_latexmk  feature_engineering_beamer.fls  feature_engineering_beamer.nav  feature_engineering_beamer.tex  feature_engineering_beamer.vrb  industry_focus_enhancements.tex  mlops_deployment_beamer.tex  statistical_learning_beamer.fdb_latexmk  statistical_learning_beamer.fls  statistical_learning_beamer.nav  statistical_learning_beamer.out
deep_learning/: README.md  deep_learning_beamer.tex
docs/: README.md
explainable_ai/: README.md  interpretability_beamer.tex
interview/: a_b_testing.fdb_latexmk  a_b_testing.fls  a_b_testing.nav  a_b_testing.toc
introduction_to_programming_R.tex/: R_programming.aux  R_programming.fdb_latexmk  R_programming.fls  R_programming.nav  R_programming.out  R_programming.tex  R_programming.toc  R_programming.vrb
mcmc/: ENHANCEMENT_GUIDE.md  mcmc_beamer.aux  mcmc_beamer.fdb_latexmk  mcmc_beamer.fls  mcmc_beamer.nav  mcmc_beamer.out  mcmc_beamer.toc  mcmc_enhancements.tex
optimization/: README.md
pca/: pca.aux  pca.fdb_latexmk  pca.fls  pca_handout.aux  pca_handout.fdb_latexmk  pca_handout.fls
reinforcement_learning/: README.md  rl_beamer.tex
scripts/: README.md  create_new_structure.sh  spell_check.py
shared/: README.md
statistical_modeling/: diogo_ribeiro_beamer_extended.aux  diogo_ribeiro_beamer_extended.fdb_latexmk  diogo_ribeiro_beamer_extended.fls  diogo_ribeiro_beamer_extended.nav  diogo_ribeiro_beamer_extended.tex  diogo_ribeiro_beamer_extended.toc  diogo_ribeiro_beamer_extended.vrb
tests/: __init__.py  conftest.py
theme/: STYLE_GUIDE.md
time_series/: ARMA_processes.aux  ARMA_processes.fdb_latexmk  ARMA_processes.fls  ARMA_processes.nav  ARMA_processes.out  ARMA_processes.toc  README.md  stationary_ergodicity.aux  stationary_ergodicity.fdb_latexmk  stationary_ergodicity.fls  stationary_ergodicity.nav  stationary_ergodicity.out  stationary_ergodicity.tex  stationary_ergodicity.toc  time_series_beamer.aux  time_series_beamer.fdb_latexmk  time_series_beamer.fls  time_series_beamer.nav  time_series_beamer.tex
(+167 files in other folders)
